fix: create ticket responsibilities
