# swagger.json
@@ -1543,7 +1543,7 @@
           "phone_number": {
             "type": "string",
             "description": "phone number",
-            "example": "0123456789"
+            "example": "0988668938"
           },
           "password": {
             "type": "string",
@@ -1575,16 +1575,11 @@
           "outbound_flight_id": {
             "type": "number",
             "description": "Outbound flight ID",
-            "example": 1
+            "example": 31
           },
           "return_flight_id": {
             "type": "number",
             "description": "Return flight ID",
-            "example": 1
-          },
-          "user_id": {
-            "type": "number",
-            "description": "User ID",
             "example": 1
           },
           "ticket_type": {
@@ -1594,7 +1589,7 @@
               "ROUND_TRIP"
             ],
             "description": "Ticket type",
-            "example": "ROUND_TRIP"
+            "example": "ONE_WAY"
           },
           "booking_class": {
             "type": "string",
@@ -1610,21 +1605,14 @@
             "type": "string",
             "description": "Description",
             "example": "This is a ticket"
-          },
-          "total_passengers": {
-            "type": "number",
-            "description": "Total passengers",
-            "example": 1
           }
         },
         "required": [
           "outbound_flight_id",
           "return_flight_id",
-          "user_id",
           "ticket_type",
           "booking_class",
-          "description",
-          "total_passengers"
+          "description"
         ]
       },
       "UpdateTicketDto": {
